# p1_recipe_recommender

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.c  recipes.json  recipes.txt  recipes[30].txt
api/: api_functions.c
db/: api_functions.c
deserializer/: deserializer.c  deserializer.h
item/: item_functions.c  item_functions.h
menu/: menu.c  menu.h
menu/logic/: menu_logic.c  menu_logic.h
print/: print.c  print.h
recipe_recommender/: recipe_recommender.c  recipe_recommender.h
stats/: stats.c  stats.h
time/: time_and_date.c  time_and_date.h
